--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Sepehr Parirokh's Profile</title>
+
   </head>
   <body>
-    <div id="app"></div>
+    <canvas id="'bg">
+
+    </canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
