--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-    <canvas id="'bg">
+    <canvas id="bg">
 
     </canvas>
     <script type="module" src="/src/main.ts"></script>
